--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-  font-family: "Roboto", sans-serif;
-}
-
 .container {
   width: 940px;
   margin: auto;
@@ -11,5 +7,92 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 10%;
+  padding: 1% 10%;
+  background-color: #4E4E4E;
+}
+
+.logo {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: white;
+}
+
+.links-list {
+  display: flex;
+}
+
+.links-list li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin: 15px;
+}
+
+.links-list li a {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+}
+
+.section1 {
+  background-image: url("https://images.unsplash.com/photo-1502224562085-639556652f33?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+}
+
+.block1 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 10px 20px;
+  width: 70%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  height: auto;
+}
+
+.p1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  color: white;
+  margin: 5%;
+  text-shadow: 2px 2px 2px rgba(0,0,0,0.6);
+}
+
+.p2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: white;
+  margin: 5%;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+}
+
+.button1 {
+  border: 3px solid #FFFFFF;
+  width: 25%;
+  box-sizing: border-box;
+  background-color: transparent;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: white;
+  margin: 5%;
+  transition: color 1s, background-color 1s;
+}
+
+.button1:hover {
+  color: black;
+  background-color: white;
 }
