--- a/style.css
+++ b/style.css
@@ -3,17 +3,21 @@
   margin: auto;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  height: 6vh;
+  padding: 10px 30px;
   background-color: #4e4e4e;
 }
 
 .logo {
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: white;
@@ -33,17 +37,24 @@
 
 .links-list li a {
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+
   font-weight: 400;
   font-size: 18px;
   color: white;
   text-align: center;
 }
 
+.disabled {
+  cursor: not-allowed;
+}
+
+.section_pad {
+  padding: 20px 30px;
+}
+
 .section1 {
   background-image: url("https://images.unsplash.com/photo-1502224562085-639556652f33?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80");
   height: 100vh;
-  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -55,15 +66,13 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: 10px 20px;
   width: 70%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   height: auto;
-  background-color: rgba(255, 255, 255, 0.1);
+  /* background-color: rgba(255, 255, 255, 0.1); */
 }
 
 .p1 {
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
   color: white;
@@ -72,7 +81,6 @@
 }
 
 .p2 {
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: white;
@@ -85,7 +93,6 @@
   width: 25%;
   box-sizing: border-box;
   background-color: transparent;
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: white;
@@ -98,6 +105,17 @@
   background-color: white;
 }
 
+.button1 a {
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 18px;
+  color: white;
+}
+
+.button1:hover a {
+  color: black;
+}
+
 .section2 {
   display: flex;
   flex-wrap: wrap;
@@ -105,49 +123,157 @@
 }
 
 .header1 {
-  font-family: "Roboto", sans-serif;
   color: black;
   font-weight: 700;
   font-size: 36px;
   display: flex;
   width: 100%;
-  padding: 10px 20px;
+  margin: 30px 0;
+}
+
+.employers {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.emp:nth-of-type(odd) {
+  flex-direction: row;
+}
+
+.emp:nth-of-type(even) {
+  flex-direction: row-reverse;
+}
+
+.emp {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.emp-img1 {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background-image: url("https://i.postimg.cc/XJGCnJcx/photo-1560250097-0b93528c311a.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  /* display: flex;
+  justify-content: space-between; */
+  margin: 25px 0;
+}
+
+.emp-img2 {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background-image: url("https://i.postimg.cc/W4fZRrrh/photo-1543132220-3ec99c6094dc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  /* display: flex;
+  justify-content: space-between;
+  align-items: center; */
+  margin: 25px 0;
 }
 
 .emp-des {
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  padding: 10px 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  width: 60%;
+  height: 220px;
 }
 
-.emp-des::first-line {
-  font-weight: 700;
+.header2 {
+  font-weight: bold;
+  margin-bottom: 20px;
 }
-
 .section3 {
   background-color: #405d78;
 }
 
-.header2 {
+.header3 {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
   color: #ffffff;
-  padding: 10px 20px;
+  margin-top: 30px;
+  margin-bottom: 70px;
 }
 
 .parent {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  width: 75%;
+  flex-direction: row;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
 
 .child {
   background-color: #f1f1f1;
-  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  width: 200px;
+  height: 200px;
   margin: 10px;
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  transition: 0.5s;
+}
+
+.child:hover {
+  transform: scale(1.05);
+}
+
+.new-txt {
+  font-weight: 400;
+  font-size: 18px;
+  display: flex;
+}
+
+.dot {
+  background-color: #e07a64;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  position: relative;
+  right: 100px;
+  bottom: 80px;
+}
+
+.foot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 9vh;
+  padding: 10px 30px;
+  background-color: #4e4e4e;
+}
+
+.footer-txt {
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.foot-icons {
+  list-style: none;
+  font-size: 40px;
+  margin-right: 70px;
+  color: #ffffff;
 }
