--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 .container {
-  width: 940px;
-  margin: auto;
+  width: 100vw;
+  /* margin: auto; */
+}
+
+@media screen and (min-width: 441px) {
+  .container {
+    width: 940px;
+    margin: auto;
+  }
 }
 
 body {
@@ -24,7 +31,26 @@ body {
 }
 
 .links-list {
+  display: none;
+}
+
+@media screen and (min-width: 441px) {
+  .links-list {
+    display: flex;
+  }
+}
+
+#bars {
   display: flex;
+  font-weight: 700;
+  font-size: 18px;
+  color: white;
+}
+
+@media screen and (min-width: 441px) {
+  #bars {
+    display: none;
+  }
 }
 
 .links-list li {
@@ -66,10 +92,20 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  width: 70%;
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  width: 380px;
   height: auto;
   /* background-color: rgba(255, 255, 255, 0.1); */
+}
+
+@media screen and (min-width: 441px) {
+  .block1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 70%;
+    height: auto;
+    /* background-color: rgba(255, 255, 255, 0.1); */
+  }
 }
 
 .p1 {
