--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@ html {
 }
 
 .container {
-  width: 100vw;
+  width: auto;
+  margin: auto;
 }
 
 @media screen and (min-width: 441px) {
   .container {
     width: 940px;
+    margin: auto;
   }
 }
 
@@ -352,7 +354,7 @@ body {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 60%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -369,7 +371,6 @@ body {
   font-size: 24px;
   width: 320px;
   height: 320px;
-  margin: 10px;
   margin-left: 10px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -388,7 +389,6 @@ body {
     font-size: 24px;
     width: 200px;
     height: 200px;
-    margin: 10px;
     margin-left: 10px;
     margin-top: 20px;
     margin-bottom: 10px;
