--- a/style.css
+++ b/style.css
@@ -14,14 +14,18 @@ body {
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100vw;
+  position: fixed;
+  z-index: 10;
   min-height: 7vh;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 7.5%;
   padding-right: 7.5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
   background-color: #4e4e4e;
 }
 
@@ -42,7 +46,7 @@ body {
   .links-list {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     position: absolute;
     right: 0px;
@@ -59,7 +63,6 @@ body {
     opacity: 0;
     list-style: none;
     display: flex;
-    justify-content: space-around;
   }
 
   .links-list li a {
@@ -69,6 +72,7 @@ body {
     font-size: 18px;
     color: white;
     text-align: center;
+    margin: 40px 0;
   }
 
   .burger {
